--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nue --serve",
+    "build": "nue --build -p"
   },
   "repository": {
     "type": "git",
@@ -11,7 +12,10 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "ISC",,
+  "dependencies": {
+    "nuekit": "^1.0.0-RC.4"
+  },
   "bugs": {
     "url": "https://github.com/mobile-michel/nuejs-test/issues"
   },
