--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   publish = "dist"
-  command = "npm run build"
+  command = "npx nue build -p"
 
 [build.environment]
   NODE_VERSION = "18"
