--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "esbuild": "^0.25.5",
     "lightningcss": "^1.30.1",
-    "nuekit": "^1.0.0-RC.4"
+    "nuekit": "^1.0.0-RC.4",
+    "nuemark": "^0.6.3"
   }
 }
